# credit-risk

./: .gitignore  .nbstripout  .pre-commit-config.yaml  README.md  pyproject.toml
data/: raw
notebooks/: eda.ipynb  exploratory.ipynb  train.ipynb
src/: algebra.py  feature_engineering.py  model.py  preprocessing.py  training.py  visualize.py
src/data/: data_loader.py  download.py  preprocessing.py
src/features/: feature_engineering.py
src/models/: model.py  training.py
src/visualization/: visualize.py
tests/: test_algebra.py  test_feature_engineering.py  test_preprocessing.py  test_training.py
