[tool.poetry]
name = "credit-risk-modeling"
version = "0.1.0"
description = "Credit Risk Modeling using XGBoost"
authors = ["Brendan Smith <mail@brendansmith.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
xgboost = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
pre-commit = "^3.8.0"
trunk = "^0.3.0"
pytest = "^8.3.3"
nbstripout = "^0.7.1"
ruff = "^0.6.6"
pylint = "^3.3.0"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
